--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,28 @@
-<h1>新規投稿</h1>
+<h1>Books</h1>
+
+<% @books.each do |book| %>
+
+  <p>Title</p>
+
+  <span><%= book.title %></span>
+  
+  <p>Body</p>
+  
+  <span><%= book.body %></span>
+
+<% end %>
 
 
-<%= form_with model: @book do |f| %>
+  <h1>New book</h1>
 
-  <h4>タイトル</h4>
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+  <h4>Title</h4>
   <%= f.text_field :title %>
-	
-  <h4>本文</h4>
+
+  <h4>Body</h4>
   <%= f.text_area :body %>
-	
-  <%= f.submit '投稿' %>
+
+  <%= f.submit 'Create Book' %>
+
 <% end %>
