--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,10 @@
   <p>Body</p>
   
   <span><%= book.body %></span>
+  
+  <span>
+    <%= link_to book.title, book_path(book.id) %>
+  </span>
 
 <% end %>
 
