--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+
 <h2>タイトル</h2>
 
 <p><%= @book.title %></p>
@@ -5,3 +6,5 @@
 <h2>本文</h2>
 
 <p><%= @book.body %></p>
+<%= link_to "編集", edit_book_path(@book.id) %>
+<%= link_to "削除", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
