--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,30 @@
-<h1>編集画面</h1>
+<h1>Editing Book</h1>
 
 <%= flash[:notice] %>
 
+<% if @book.errors.any? %>
+
+  <%= @book.errors.count %> error has occurred
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
 
-  <h4>タイトル</h4>
+  <h4>title</h4>
   <%= f.text_field :title %>
-  
-  <h4>本文</h4>
+
+  <h4>body</h4>
   <%= f.text_area :body %>
-  
-  <%= f.submit '保存' %>
-  
+
+   <%= f.submit 'Update Book' %>
+
+  <%= link_to "show", book_path(@book.id) %>
+
+  <%= link_to "Back", books_path(@books) %>
+
+ 
 <% end %>
