--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,28 @@
 <h1>Books</h1>
 
 
-<% @books.each do |book| %>
-
  <table>
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th colspan="3"></th>
 
- </tr>
-<a href="/books">start</a>
-<a href="/books">start</a>
-<a href="/books">start</a>
- <tr>
-  <span>
-    <%= link_to book.title, book_path(book.id) %>
-  </span>
-  </tr>
-  
+   <tr>
+     <th>Title</th>
+     <th>Body</th>
+     <th colspan="3"></th>
+   </tr>
+
+   <% @books.each do |book| %>
+
+   <tr>
+     <td><span><%= book.title %></span></td>
+     <td><span><%= book.body %></span></td>
+     <td><%= link_to "show",book_path(book.id) %></td>
+     <td><%= link_to "edit",edit_book_path(book.id) %></td>
+     <td><%= link_to "Destroy",book_path(book.id), method: :delete, "data-confirm" => "Aer you sure?" %> </td>
+   </tr>
+
+
+
   <% end %>
-  
+
 </table>
 
   <h1>New book</h1>
